--- a/src/assets/scss/pages/_header.scss
+++ b/src/assets/scss/pages/_header.scss
@@ -1,11 +1,10 @@
-.header {
+.header-background {
 	background-image: url('../../images/header-bg/header-bg-desktop.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
-	max-height: 826px;
-
+	min-height: 810px;
 	padding-top: 78px;
-  padding-right: 54px;
+	padding-right: 54px;
 }
 
 .header__top {
@@ -72,6 +71,7 @@
 	display: flex;
 	flex-wrap: wrap;
 
+	padding-right: 54px;
 	margin-left: -5px;
 	padding-top: 93px;
 }
